# space_mining

./: .gitignore  README.md  README_gif_generation.md  enjoy_space_mining.py  enjoy_trained_model.py  example.md  example.py  example_sb3_enjoy.py  example_sb3_train.py  index.html  initial_reward_prompt.txt  pyproject.toml  space_mining_ollama.yml  step.py  task_description.txt  test_env.py  train.py
.github/workflows/: build-release.yml  pypi-publish.yml  run-pytest.yml
docs/: gymnasium.md  stable-baseline3.md
env_code/: __init__.py  env.py  env_1.py  reward_functions.py  reward_wrapper.py
env_code/train_info/: component_logs.json
space_mining/: __init__.py
space_mining/agents/: enjoy.py  train.py
space_mining/envs/: __init__.py  core.py  renderer.py  space_mining_env.py  wrappers.py
tests/: test_env.py
